use adventure translator